--- a/style/idangerous.swiper.css
+++ b/style/idangerous.swiper.css
@@ -73,8 +73,8 @@ sizes, pagination, etc.
 .swiper-container {
 	/* Specify Swiper's Size: */
 
-	width:200px;
-	height: 100px;
+	width:100%;
+	height:100%;
 }
 .swiper-slide {
 	/* Specify Slides's Size: */
